appId: com.apple.Preferences
---
- launchApp
- tapOn: "General"
- takeScreenshot: "general_settings.png"
- tapOn:
    id: "BackButton"
- waitForVisible:
    text: "Accessibility"
- tapOn: "Accessibility"
- takeScreenshot: "accessibility_settings.png"
